[package]
name = "elementwise"
description = "Elementwise operations implemented for standard Rust containers"

version = "0.3.0"
authors = ["Tom Spooner <spooner10000@gmail.com>"]

license = "MIT"
readme = "README.md"

keywords = ["numerics", "mathematics"]

repository = "https://github.com/tspooner/elementwise"
documentation = "https://docs.rs/elementwise"

edition = "2018"

[features]
default = ["arithmetic"]

arithmetic = []
logical = []
